--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -62,6 +62,14 @@ flutter:
   # assets:
   #   - images/a_dot_burr.jpeg
   #   - images/a_dot_ham.jpeg
+  assets:
+    - assets/images/American_Express_Logo_Text.png
+    - assets/images/mastercard_logo.png
+    - assets/images/hipercard_logo.png
+    - assets/images/visa_logo.png
+    - assets/images/elo_logo.png
+    - assets/images/elo_logo_2.png
+
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware
