--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,6 +35,9 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
   brasil_fields: ^1.5.0
+  firebase_auth: ^3.9.0
+  http: ^0.13.5
+  provider: ^6.0.3
 
 dev_dependencies:
   flutter_test:
