--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,6 +41,7 @@ dependencies:
   image_picker: ^0.8.6
   path_provider: ^2.0.11
   path: ^1.8.2
+  animations: ^2.0.7
 
 dev_dependencies:
   flutter_test:
