--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -79,6 +79,8 @@ flutter:
     - assets/images/elo_logo.png
     - assets/images/elo_logo_2.png
     - assets/images/spacepay_transparent.png
+    - assets/images/app_logo2.jpg
+    - assets/images/app_logo3.jpg
 
 
   # An image asset can refer to one or more resolution-specific "variants", see
@@ -92,12 +94,15 @@ flutter:
   # "family" key with the font family name, and a "fonts" key with a
   # list giving the asset and other descriptors for the font. For
   # example:
-  # fonts:
-  #   - family: Schyler
-  #     fonts:
-  #       - asset: fonts/Schyler-Regular.ttf
-  #       - asset: fonts/Schyler-Italic.ttf
-  #         style: italic
+  fonts:
+    - family: Eczar
+      fonts:
+        - asset: assets/fonts/eczar/Eczar-Regular.ttf
+        - asset: assets/fonts/eczar/Eczar-Medium.ttf
+        - asset: assets/fonts/eczar/Eczar-SemiBold.ttf
+        - asset: assets/fonts/eczar/Eczar-Bold.ttf
+        - asset: assets/fonts/eczar/Eczar-ExtraBold.ttf
+
   #   - family: Trajan Pro
   #     fonts:
   #       - asset: fonts/TrajanPro.ttf
