--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -43,6 +43,7 @@ dependencies:
   path: ^1.8.2
   animations: ^2.0.7
   firebase_core: ^1.24.0
+  credit_card_validator: ^2.0.1
 
 dev_dependencies:
   flutter_test:
