--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -1,5 +1,5 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.gdppi.spacepay">
+    package="com.rafaeucastro.spacepay">
    <application
         android:label="spacepay"
         android:name="${applicationName}"
