--- a/macos/Runner/Configs/AppInfo.xcconfig
+++ b/macos/Runner/Configs/AppInfo.xcconfig
@@ -8,7 +8,7 @@
 PRODUCT_NAME = spacepay
 
 // The application's bundle identifier
-PRODUCT_BUNDLE_IDENTIFIER = com.gdppi.spacepay
+PRODUCT_BUNDLE_IDENTIFIER = com.rafaeucastro.spacepay
 
 // The copyright displayed in application information
 PRODUCT_COPYRIGHT = Copyright © 2022 com.example. All rights reserved.
